// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> Icon renders target 1`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="target"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "target",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "currentColor",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <circle
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <circle
              cx="12"
              cy="12"
              r="10"
            />,
            <circle
              cx="12"
              cy="12"
              r="6"
            />,
            <circle
              cx="12"
              cy="12"
              r="2"
            />,
          ],
          "fill": "none",
          "height": 36,
          "stroke": "currentColor",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <circle
              cx="12"
              cy="12"
              r="10"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cx": "12",
              "cy": "12",
              "r": "10",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "circle",
          },
          Object {
            "instance": <circle
              cx="12"
              cy="12"
              r="6"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cx": "12",
              "cy": "12",
              "r": "6",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "circle",
          },
          Object {
            "instance": <circle
              cx="12"
              cy="12"
              r="2"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cx": "12",
              "cy": "12",
              "r": "2",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "circle",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "target",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "currentColor",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <circle
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              cx="12"
              cy="12"
              r="2"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <circle
                cx="12"
                cy="12"
                r="10"
              />,
              <circle
                cx="12"
                cy="12"
                r="6"
              />,
              <circle
                cx="12"
                cy="12"
                r="2"
              />,
            ],
            "fill": "none",
            "height": 36,
            "stroke": "currentColor",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <circle
                cx="12"
                cy="12"
                r="10"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cx": "12",
                "cy": "12",
                "r": "10",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "circle",
            },
            Object {
              "instance": <circle
                cx="12"
                cy="12"
                r="6"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cx": "12",
                "cy": "12",
                "r": "6",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "circle",
            },
            Object {
              "instance": <circle
                cx="12"
                cy="12"
                r="2"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cx": "12",
                "cy": "12",
                "r": "2",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "circle",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Icon /> Icon renders target 2`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="off-target"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "off-target",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "#ff9966",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="#ff9966"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <circle
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <circle
              cx="12"
              cy="12"
              r="10"
            />,
            <circle
              cx="12"
              cy="12"
              r="6"
            />,
            <circle
              cx="12"
              cy="12"
              r="2"
            />,
          ],
          "fill": "none",
          "height": 36,
          "stroke": "#ff9966",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <circle
              cx="12"
              cy="12"
              r="10"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cx": "12",
              "cy": "12",
              "r": "10",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "circle",
          },
          Object {
            "instance": <circle
              cx="12"
              cy="12"
              r="6"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cx": "12",
              "cy": "12",
              "r": "6",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "circle",
          },
          Object {
            "instance": <circle
              cx="12"
              cy="12"
              r="2"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cx": "12",
              "cy": "12",
              "r": "2",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "circle",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "off-target",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "#ff9966",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="#ff9966"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <circle
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              cx="12"
              cy="12"
              r="2"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <circle
                cx="12"
                cy="12"
                r="10"
              />,
              <circle
                cx="12"
                cy="12"
                r="6"
              />,
              <circle
                cx="12"
                cy="12"
                r="2"
              />,
            ],
            "fill": "none",
            "height": 36,
            "stroke": "#ff9966",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <circle
                cx="12"
                cy="12"
                r="10"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cx": "12",
                "cy": "12",
                "r": "10",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "circle",
            },
            Object {
              "instance": <circle
                cx="12"
                cy="12"
                r="6"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cx": "12",
                "cy": "12",
                "r": "6",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "circle",
            },
            Object {
              "instance": <circle
                cx="12"
                cy="12"
                r="2"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cx": "12",
                "cy": "12",
                "r": "2",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "circle",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Icon /> Icon renders target 3`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="on-target"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "on-target",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "#6CC551",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="#6CC551"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <circle
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <circle
              cx="12"
              cy="12"
              r="10"
            />,
            <circle
              cx="12"
              cy="12"
              r="6"
            />,
            <circle
              cx="12"
              cy="12"
              r="2"
            />,
          ],
          "fill": "none",
          "height": 36,
          "stroke": "#6CC551",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <circle
              cx="12"
              cy="12"
              r="10"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cx": "12",
              "cy": "12",
              "r": "10",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "circle",
          },
          Object {
            "instance": <circle
              cx="12"
              cy="12"
              r="6"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cx": "12",
              "cy": "12",
              "r": "6",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "circle",
          },
          Object {
            "instance": <circle
              cx="12"
              cy="12"
              r="2"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cx": "12",
              "cy": "12",
              "r": "2",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "circle",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "on-target",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "#6CC551",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="#6CC551"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <circle
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              cx="12"
              cy="12"
              r="2"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <circle
                cx="12"
                cy="12"
                r="10"
              />,
              <circle
                cx="12"
                cy="12"
                r="6"
              />,
              <circle
                cx="12"
                cy="12"
                r="2"
              />,
            ],
            "fill": "none",
            "height": 36,
            "stroke": "#6CC551",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <circle
                cx="12"
                cy="12"
                r="10"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cx": "12",
                "cy": "12",
                "r": "10",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "circle",
            },
            Object {
              "instance": <circle
                cx="12"
                cy="12"
                r="6"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cx": "12",
                "cy": "12",
                "r": "6",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "circle",
            },
            Object {
              "instance": <circle
                cx="12"
                cy="12"
                r="2"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cx": "12",
                "cy": "12",
                "r": "2",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "circle",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Icon /> Icon renders target 4`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="trending-Up"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "trending-Up",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "currentColor",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="23 6 13.5 15.5 8.5 10.5 1 18"
          />
          <polyline
            points="17 6 23 6 23 12"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <polyline
              points="23 6 13.5 15.5 8.5 10.5 1 18"
            />,
            <polyline
              points="17 6 23 6 23 12"
            />,
          ],
          "fill": "none",
          "height": 36,
          "stroke": "currentColor",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <polyline
              points="23 6 13.5 15.5 8.5 10.5 1 18"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "points": "23 6 13.5 15.5 8.5 10.5 1 18",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "polyline",
          },
          Object {
            "instance": <polyline
              points="17 6 23 6 23 12"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "points": "17 6 23 6 23 12",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "polyline",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "trending-Up",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "currentColor",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="23 6 13.5 15.5 8.5 10.5 1 18"
            />
            <polyline
              points="17 6 23 6 23 12"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <polyline
                points="23 6 13.5 15.5 8.5 10.5 1 18"
              />,
              <polyline
                points="17 6 23 6 23 12"
              />,
            ],
            "fill": "none",
            "height": 36,
            "stroke": "currentColor",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <polyline
                points="23 6 13.5 15.5 8.5 10.5 1 18"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "points": "23 6 13.5 15.5 8.5 10.5 1 18",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "polyline",
            },
            Object {
              "instance": <polyline
                points="17 6 23 6 23 12"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "points": "17 6 23 6 23 12",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "polyline",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Icon /> Icon renders target 5`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="trending-down"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "trending-down",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "currentColor",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="23 18 13.5 8.5 8.5 13.5 1 6"
          />
          <polyline
            points="17 18 23 18 23 12"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <polyline
              points="23 18 13.5 8.5 8.5 13.5 1 6"
            />,
            <polyline
              points="17 18 23 18 23 12"
            />,
          ],
          "fill": "none",
          "height": 36,
          "stroke": "currentColor",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <polyline
              points="23 18 13.5 8.5 8.5 13.5 1 6"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "points": "23 18 13.5 8.5 8.5 13.5 1 6",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "polyline",
          },
          Object {
            "instance": <polyline
              points="17 18 23 18 23 12"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "points": "17 18 23 18 23 12",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "polyline",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "trending-down",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "currentColor",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="23 18 13.5 8.5 8.5 13.5 1 6"
            />
            <polyline
              points="17 18 23 18 23 12"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <polyline
                points="23 18 13.5 8.5 8.5 13.5 1 6"
              />,
              <polyline
                points="17 18 23 18 23 12"
              />,
            ],
            "fill": "none",
            "height": 36,
            "stroke": "currentColor",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <polyline
                points="23 18 13.5 8.5 8.5 13.5 1 6"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "points": "23 18 13.5 8.5 8.5 13.5 1 6",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "polyline",
            },
            Object {
              "instance": <polyline
                points="17 18 23 18 23 12"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "points": "17 18 23 18 23 12",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "polyline",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Icon /> Icon renders target 6`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="maximize"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "maximize",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "currentColor",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <path
            d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"
          />,
          "fill": "none",
          "height": 36,
          "stroke": "currentColor",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <path
              d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "path",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "maximize",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "currentColor",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <path
              d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"
            />,
            "fill": "none",
            "height": 36,
            "stroke": "currentColor",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <path
                d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "d": "M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "path",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Icon /> Icon renders target 7`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="minimize"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "minimize",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "currentColor",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <path
            d="M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3"
          />,
          "fill": "none",
          "height": 36,
          "stroke": "currentColor",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <path
              d="M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "path",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "minimize",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "currentColor",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <path
              d="M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3"
            />,
            "fill": "none",
            "height": 36,
            "stroke": "currentColor",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <path
                d="M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "d": "M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "path",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Icon /> Icon renders target 8`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="github"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "github",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "currentColor",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <path
            d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
          />,
          "fill": "none",
          "height": 36,
          "stroke": "currentColor",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <path
              d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "path",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "github",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "currentColor",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <path
              d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
            />,
            "fill": "none",
            "height": 36,
            "stroke": "currentColor",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <path
                d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "d": "M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "path",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Icon /> Icon renders target 9`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="chevrons-down"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "chevrons-down",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "currentColor",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="7 13 12 18 17 13"
          />
          <polyline
            points="7 6 12 11 17 6"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <polyline
              points="7 13 12 18 17 13"
            />,
            <polyline
              points="7 6 12 11 17 6"
            />,
          ],
          "fill": "none",
          "height": 36,
          "stroke": "currentColor",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <polyline
              points="7 13 12 18 17 13"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "points": "7 13 12 18 17 13",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "polyline",
          },
          Object {
            "instance": <polyline
              points="7 6 12 11 17 6"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "points": "7 6 12 11 17 6",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "polyline",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "chevrons-down",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "currentColor",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="7 13 12 18 17 13"
            />
            <polyline
              points="7 6 12 11 17 6"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <polyline
                points="7 13 12 18 17 13"
              />,
              <polyline
                points="7 6 12 11 17 6"
              />,
            ],
            "fill": "none",
            "height": 36,
            "stroke": "currentColor",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <polyline
                points="7 13 12 18 17 13"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "points": "7 13 12 18 17 13",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "polyline",
            },
            Object {
              "instance": <polyline
                points="7 6 12 11 17 6"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "points": "7 6 12 11 17 6",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "polyline",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Icon /> Icon renders target 10`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="chevrons-up"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "chevrons-up",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "currentColor",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="17 11 12 6 7 11"
          />
          <polyline
            points="17 18 12 13 7 18"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <polyline
              points="17 11 12 6 7 11"
            />,
            <polyline
              points="17 18 12 13 7 18"
            />,
          ],
          "fill": "none",
          "height": 36,
          "stroke": "currentColor",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <polyline
              points="17 11 12 6 7 11"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "points": "17 11 12 6 7 11",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "polyline",
          },
          Object {
            "instance": <polyline
              points="17 18 12 13 7 18"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "points": "17 18 12 13 7 18",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "polyline",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "chevrons-up",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "currentColor",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="17 11 12 6 7 11"
            />
            <polyline
              points="17 18 12 13 7 18"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <polyline
                points="17 11 12 6 7 11"
              />,
              <polyline
                points="17 18 12 13 7 18"
              />,
            ],
            "fill": "none",
            "height": 36,
            "stroke": "currentColor",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <polyline
                points="17 11 12 6 7 11"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "points": "17 11 12 6 7 11",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "polyline",
            },
            Object {
              "instance": <polyline
                points="17 18 12 13 7 18"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "points": "17 18 12 13 7 18",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "polyline",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Icon /> Icon renders target 11`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Icon
    size="md"
    type="x-circle"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "getWrappingComponentRenderer": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "size": "md",
      "type": "x-circle",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "color": "currentColor",
        "size": 36,
      },
      "ref": null,
      "rendered": Object {
        "instance": <svg
          fill="none"
          height="36"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="15"
            x2="9"
            y1="9"
            y2="15"
          />
          <line
            x1="9"
            x2="15"
            y1="9"
            y2="15"
          />
        </svg>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <circle
              cx="12"
              cy="12"
              r="10"
            />,
            <line
              x1="15"
              x2="9"
              y1="9"
              y2="15"
            />,
            <line
              x1="9"
              x2="15"
              y1="9"
              y2="15"
            />,
          ],
          "fill": "none",
          "height": 36,
          "stroke": "currentColor",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": "2",
          "viewBox": "0 0 24 24",
          "width": 36,
          "xmlns": "http://www.w3.org/2000/svg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <circle
              cx="12"
              cy="12"
              r="10"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cx": "12",
              "cy": "12",
              "r": "10",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "circle",
          },
          Object {
            "instance": <line
              x1="15"
              x2="9"
              y1="9"
              y2="15"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "x1": "15",
              "x2": "9",
              "y1": "9",
              "y2": "15",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "line",
          },
          Object {
            "instance": <line
              x1="9"
              x2="15"
              y1="9"
              y2="15"
            />,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "x1": "9",
              "x2": "15",
              "y1": "9",
              "y2": "15",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": "line",
          },
        ],
        "type": "svg",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": "md",
        "type": "x-circle",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "currentColor",
          "size": 36,
        },
        "ref": null,
        "rendered": Object {
          "instance": <svg
            fill="none"
            height="36"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="15"
              x2="9"
              y1="9"
              y2="15"
            />
            <line
              x1="9"
              x2="15"
              y1="9"
              y2="15"
            />
          </svg>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <circle
                cx="12"
                cy="12"
                r="10"
              />,
              <line
                x1="15"
                x2="9"
                y1="9"
                y2="15"
              />,
              <line
                x1="9"
                x2="15"
                y1="9"
                y2="15"
              />,
            ],
            "fill": "none",
            "height": 36,
            "stroke": "currentColor",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": "2",
            "viewBox": "0 0 24 24",
            "width": 36,
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <circle
                cx="12"
                cy="12"
                r="10"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cx": "12",
                "cy": "12",
                "r": "10",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "circle",
            },
            Object {
              "instance": <line
                x1="15"
                x2="9"
                y1="9"
                y2="15"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "x1": "15",
                "x2": "9",
                "y1": "9",
                "y2": "15",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "line",
            },
            Object {
              "instance": <line
                x1="9"
                x2="15"
                y1="9"
                y2="15"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "x1": "9",
                "x2": "15",
                "y1": "9",
                "y2": "15",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "line",
            },
          ],
          "type": "svg",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
